Tweak StingViewController. Make preview button a toggle instead of momentary.

--- a/Resources/Main.storyboard
+++ b/Resources/Main.storyboard
@@ -88,12 +88,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sting #" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W2N-PM-WRG">
-                                <rect key="frame" x="30" y="94" width="49" height="18"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="waveload" translatesAutoresizingMaskIntoConstraints="NO" id="DSS-g4-Ymn">
                                 <rect key="frame" x="20" y="274" width="280" height="75"/>
                                 <constraints>
@@ -101,22 +95,23 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lRX-bK-xRr">
-                                <rect key="frame" x="15" y="369" width="84" height="38"/>
+                                <rect key="frame" x="15" y="369" width="114" height="68"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="114" id="xwc-Xn-8Yc"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <inset key="contentEdgeInsets" minX="15" minY="10" maxX="15" maxY="10"/>
+                                <inset key="contentEdgeInsets" minX="15" minY="25" maxX="15" maxY="25"/>
                                 <state key="normal" title="Preview">
                                     <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
-                                    <action selector="startPreview" destination="sKY-0b-GtB" eventType="touchDown" id="L1m-hr-lcc"/>
-                                    <action selector="stopPreview" destination="sKY-0b-GtB" eventType="touchUpOutside" id="1Ih-CC-Qzk"/>
-                                    <action selector="stopPreview" destination="sKY-0b-GtB" eventType="touchUpInside" id="SEx-bT-muP"/>
+                                    <action selector="togglePreview" destination="sKY-0b-GtB" eventType="touchDown" id="L1m-hr-lcc"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tyO-e7-KqD">
-                                <rect key="frame" x="195" y="369" width="109" height="38"/>
+                                <rect key="frame" x="185" y="374" width="119" height="58"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                <inset key="contentEdgeInsets" minX="20" minY="10" maxX="20" maxY="10"/>
+                                <inset key="contentEdgeInsets" minX="25" minY="20" maxX="25" maxY="20"/>
                                 <state key="normal" title="Zoom Out">
                                     <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
@@ -159,13 +154,13 @@
                                 </connections>
                             </segmentedControl>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loop" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HRD-t4-QSP">
-                                <rect key="frame" x="111" y="432" width="39" height="21"/>
+                                <rect key="frame" x="111" y="457" width="39" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RCd-w4-mUV">
-                                <rect key="frame" x="170" y="427" width="51" height="31"/>
+                                <rect key="frame" x="170" y="452" width="51" height="31"/>
                                 <connections>
                                     <action selector="toggleLoop:" destination="sKY-0b-GtB" eventType="valueChanged" id="m5f-vK-8vz"/>
                                 </connections>
@@ -176,25 +171,23 @@
                         <constraints>
                             <constraint firstItem="DSS-g4-Ymn" firstAttribute="top" secondItem="1fo-c8-qOt" secondAttribute="bottom" constant="40" id="0zh-qX-Ocv"/>
                             <constraint firstItem="8ah-Ra-mmM" firstAttribute="top" secondItem="EDC-cS-RXP" secondAttribute="bottom" constant="5" id="2FF-7U-pZO"/>
-                            <constraint firstItem="W2N-PM-WRG" firstAttribute="top" secondItem="jgb-pc-X2x" secondAttribute="bottom" constant="30" id="2of-oI-IBc"/>
                             <constraint firstAttribute="trailing" secondItem="SDr-NV-ToG" secondAttribute="trailing" constant="16" id="2pJ-Jo-116"/>
                             <constraint firstItem="EDC-cS-RXP" firstAttribute="leading" secondItem="8ah-Ra-mmM" secondAttribute="leading" id="2q3-eT-qTJ"/>
-                            <constraint firstItem="W2N-PM-WRG" firstAttribute="leading" secondItem="EDC-cS-RXP" secondAttribute="leading" id="CQM-FG-Gbq"/>
+                            <constraint firstItem="SDr-NV-ToG" firstAttribute="top" secondItem="jgb-pc-X2x" secondAttribute="bottom" constant="20" id="6cP-Jn-T5T"/>
                             <constraint firstItem="tyO-e7-KqD" firstAttribute="trailing" secondItem="SDr-NV-ToG" secondAttribute="trailing" id="DpU-mO-Ylm"/>
                             <constraint firstItem="lRX-bK-xRr" firstAttribute="top" secondItem="DSS-g4-Ymn" secondAttribute="bottom" constant="20" id="E5L-3c-Lzb"/>
-                            <constraint firstItem="EDC-cS-RXP" firstAttribute="top" secondItem="W2N-PM-WRG" secondAttribute="bottom" constant="30" id="Jkq-PH-xXN"/>
                             <constraint firstItem="RCd-w4-mUV" firstAttribute="leading" secondItem="IL7-SC-53c" secondAttribute="centerX" constant="10" id="KVV-rX-PAa"/>
                             <constraint firstItem="tyO-e7-KqD" firstAttribute="baseline" secondItem="lRX-bK-xRr" secondAttribute="baseline" id="Kts-uq-dV1"/>
+                            <constraint firstItem="EDC-cS-RXP" firstAttribute="top" secondItem="jgb-pc-X2x" secondAttribute="bottom" constant="78" id="QPw-qP-6zg"/>
                             <constraint firstItem="8ah-Ra-mmM" firstAttribute="trailing" secondItem="EDC-cS-RXP" secondAttribute="trailing" id="SWE-hL-3z9"/>
                             <constraint firstAttribute="trailing" secondItem="DSS-g4-Ymn" secondAttribute="trailing" constant="20" id="aWp-AI-3Kb"/>
                             <constraint firstItem="RCd-w4-mUV" firstAttribute="leading" secondItem="HRD-t4-QSP" secondAttribute="trailing" constant="20" id="c7p-OY-Jtn"/>
                             <constraint firstItem="lRX-bK-xRr" firstAttribute="leading" secondItem="8ah-Ra-mmM" secondAttribute="leading" constant="-15" id="d2L-ma-SaJ"/>
                             <constraint firstItem="RCd-w4-mUV" firstAttribute="top" secondItem="tyO-e7-KqD" secondAttribute="bottom" constant="20" id="f8v-A0-bHr"/>
-                            <constraint firstItem="W2N-PM-WRG" firstAttribute="leading" secondItem="IL7-SC-53c" secondAttribute="leading" constant="30" id="krv-06-nMs"/>
                             <constraint firstItem="1fo-c8-qOt" firstAttribute="centerX" secondItem="IL7-SC-53c" secondAttribute="centerX" id="kzm-yq-zZ4"/>
                             <constraint firstItem="1fo-c8-qOt" firstAttribute="top" secondItem="8ah-Ra-mmM" secondAttribute="bottom" constant="20" id="rEg-Wa-hZz"/>
+                            <constraint firstItem="EDC-cS-RXP" firstAttribute="leading" secondItem="IL7-SC-53c" secondAttribute="leading" constant="30" id="rME-so-9bz"/>
                             <constraint firstAttribute="trailing" secondItem="EDC-cS-RXP" secondAttribute="trailing" constant="30" id="sSW-hV-xtJ"/>
-                            <constraint firstItem="W2N-PM-WRG" firstAttribute="baseline" secondItem="SDr-NV-ToG" secondAttribute="baseline" id="tK0-ur-YpX"/>
                             <constraint firstItem="HRD-t4-QSP" firstAttribute="centerY" secondItem="RCd-w4-mUV" secondAttribute="centerY" id="tvh-vG-cff"/>
                             <constraint firstItem="DSS-g4-Ymn" firstAttribute="leading" secondItem="IL7-SC-53c" secondAttribute="leading" constant="20" id="wes-Sw-WKg"/>
                         </constraints>
@@ -203,7 +196,7 @@
                     <navigationItem key="navigationItem" id="JWi-WN-0lh"/>
                     <connections>
                         <outlet property="loopSwitch" destination="RCd-w4-mUV" id="dO8-oc-7GR"/>
-                        <outlet property="stingNumberLabel" destination="W2N-PM-WRG" id="8X1-SE-u8r"/>
+                        <outlet property="previewButton" destination="lRX-bK-xRr" id="2nX-BN-PIr"/>
                         <outlet property="subtitleLabel" destination="8ah-Ra-mmM" id="PDI-ff-nfj"/>
                         <outlet property="titleLabel" destination="EDC-cS-RXP" id="mWC-r4-wcL"/>
                         <outlet property="waveformLoadingImageView" destination="DSS-g4-Ymn" id="NRW-rX-Hcg"/>
@@ -336,7 +329,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Multiroute" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lbT-ZZ-2IW">
-                                                    <rect key="frame" x="20" y="11.5" width="78" height="21"/>
+                                                    <rect key="frame" x="15" y="11.5" width="78" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -348,7 +341,7 @@
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="VjQ-rb-Cun" secondAttribute="trailing" constant="20" symbolic="YES" id="MKb-zU-K1q"/>
                                                 <constraint firstItem="VjQ-rb-Cun" firstAttribute="centerY" secondItem="i5O-hL-xle" secondAttribute="centerY" id="Oq7-fy-2Xk"/>
-                                                <constraint firstItem="lbT-ZZ-2IW" firstAttribute="leading" secondItem="i5O-hL-xle" secondAttribute="leading" constant="20" symbolic="YES" id="TOZ-xq-b2u"/>
+                                                <constraint firstItem="lbT-ZZ-2IW" firstAttribute="leading" secondItem="i5O-hL-xle" secondAttribute="leading" constant="15" id="TOZ-xq-b2u"/>
                                                 <constraint firstItem="lbT-ZZ-2IW" firstAttribute="centerY" secondItem="i5O-hL-xle" secondAttribute="centerY" id="qpM-td-KZx"/>
                                             </constraints>
                                         </tableViewCellContentView>
